[package]
name = "atomic-swaps-contract"
version = "0.1.0"
authors = ["Brianna Migliaccio <migliacciobri@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std       = "1.4.0"
cosmwasm-schema    = "1.4.0"
cw-storage-plus    = "1.1.0"
osmosis-std        = "0.19.2"
cosmwasm-storage   = "1.4.0"

[dev-dependencies]
osmosis-test-tube  = "19.2.0"